force-app/main/default/objects/Chit_Payment__c/Chit_Payment__c.object-meta.xml
<CustomObject>
    <label>Chit Payment</label>
    <nameField>
        <label>Chit Payment RId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chit Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>