force-app/main/default/objects/Chit_Payment__c/fields/Chit_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Chit_Customer_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chit Customer Name</label>
    <referenceTo>Chit_Customer__c</referenceTo>
    <relationshipLabel>Chit Payments</relationshipLabel>
    <relationshipName>Chit_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>