force-app/main/default/objects/Chit_Payment__c/fields/Chit_Value__c.field-meta.xml
<CustomField>
    <fullName>Chit_Value__c</fullName>
    <formula>IF(ISBLANK( Payment_Chit_Group_Name__r.Chit_Value__r.Name ), 0, VALUE(Payment_Chit_Group_Name__r.Chit_Value__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>