force-app/main/default/objects/Chit_Payment__c/fields/Date_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Payment__c</fullName>
    <label>Date Of Payment</label>
    <type>Date</type>
</CustomField>