force-app/main/default/objects/Chit_Payment__c/fields/Payment_Chit_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Chit_Group_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Chit Group Name</label>
    <referenceTo>Chit_Groups__c</referenceTo>
    <relationshipLabel>Chit Payments</relationshipLabel>
    <relationshipName>Chit_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>