force-app/main/default/objects/Chit_Payment__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <description>Record Type related to payment receiving from customer</description>
    <label>Credit</label>
</RecordType>