force-app/main/default/objects/Chit_Payment__c/recordTypes/Debit.recordType-meta.xml
<RecordType>
    <fullName>Debit</fullName>
    <active>true</active>
    <description>Record type related to payment towards customer from firm</description>
    <label>Debit</label>
</RecordType>